clusters/openshift/apps/ai/llama-cpp/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: llama-cpp-route
  namespace: llama-cpp
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: openshift-gateway
    namespace: openshift-ingress
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: openshift-gateway-internal
    namespace: openshift-ingress
  hostnames:
  - llama.vanillax.xyz
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: "/"
    timeouts:
      request: 30m
      backendRequest: 30m
    backendRefs:
    - group: ''
      kind: Service
      name: llama-cpp-service
      port: 8080
      weight: 1
